fix: alterando o copy para RhPlatinum

--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
     <div class="copyright">
-      &copy; Copyright <strong><span>NiceAdmin</span></strong>. All Rights Reserved 2023
+      &copy; Copyright <strong><span>Platinum</span></strong>. Todos os direitos reservados 2023
     </div>
 
   </footer><!-- End Footer -->
