alteração do background color

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <title></title>
 </head>
 
-<body style="background: #f6f9ff;">
+<body>
   <nav class="sidebar close col-sm">
     <header>
       <div class="image-text">
