--- a/index.html
+++ b/index.html
@@ -83,29 +83,25 @@
   </section>
 
   <section class="home">
-    <section class="nav--user">
-      <nav class="shadow p-3 mb-3 bg-body rounded header--menu--home" style="height: 80px;">
-        <div class="dropdown--nav" href="#">
-          <a class="dropdown--nav--list" href="#" role="" data-bs-toggle="dropdown" aria-expanded="false">
-            <span class="btn btn-" style="border-radius: 50%;"></span>
-            <span class="user--name--nav"><strong>Jefferson M.</strong><i class="bi bi-caret-down-fill">
-              </i></span>
-          </a>
-          <ul class="dropdown-menu">
-            <li class="list--menu--nav"><a class="dropdown-item" style="display: flex; justify-content: flex-start;"
-                href="#">
-                <i class="bi bi-pencil" style="margin-right: 10px;"></i>Trocar Senha</a>
-            </li>
+    <nav class="mb-3 bg-body border-bottom" style="height: 50px;">
+      <div class="dropdown--nav" href="#">
+        <a class="dropdown--nav--list" href="#" role="" data-bs-toggle="dropdown" aria-expanded="false">
+          <span class="btn btn-" style="border-radius: 50%;"></span>
+          <span class="user--name--nav"><strong><i class="bi bi-gear-fill"></i></strong></span>
+        </a>
+        <ul class="dropdown-menu">
+          <li class="list--menu--nav"><a class="dropdown-item" style="display: flex; justify-content: flex-start;"
+              href="#">
+              <i class="bi bi-pencil" style="margin-right: 10px;"></i>Trocar Senha</a>
+          </li>
 
-            <li class="list--menu--nav"><a class="dropdown-item" style="display: flex; justify-content: flex-start; "
-                href="#">
-                <i class="bi bi-box-arrow-right" style="margin-right: 10px;"></i>Logout</a>
-            </li>
-          </ul>
-        </div>
-
-      </nav>
-    </section>
+          <li class="list--menu--nav"><a class="dropdown-item" style="display: flex; justify-content: flex-start; "
+              href="#">
+              <i class="bi bi-box-arrow-right" style="margin-right: 10px;"></i>Logout</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
 
     <section class="pagina--descricao">
       <h1 class="text">Home</h1>
