--- a/index.html
+++ b/index.html
@@ -26,13 +26,12 @@
 </head>
 
 <body>
-  <nav class="sidebar close col-sm">
+  <nav class="sidebar close border-end">
     <header>
       <div class="image-text">
         <span class="image">
           <img src="logo-fundo-transparente-novo_P6GmKNt.png" alt="Icone-do-Site-Platinum">
         </span>
-
       </div>
       <i class='bx bx-menu toggle'></i>
     </header>
@@ -80,7 +79,6 @@
       </div>
     </div>
   </nav>
-  </section>
 
   <section class="home">
     <nav class="mb-3 bg-body border-bottom" style="height: 50px;">
@@ -94,7 +92,6 @@
               href="#">
               <i class="bi bi-pencil" style="margin-right: 10px;"></i>Trocar Senha</a>
           </li>
-
           <li class="list--menu--nav"><a class="dropdown-item" style="display: flex; justify-content: flex-start; "
               href="#">
               <i class="bi bi-box-arrow-right" style="margin-right: 10px;"></i>Logout</a>
