--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
       </div>
     </nav>
 
-    <section class="pagina--descricao">
-      <h1 class="text">Home</h1>
-      <span class="navegation--pag">Home / &nbsp; <strong>Dashboard</strong></span>
+    <section style="margin-left: 20px;">
+      <h1>Home</h1>
+      <p class="ms-1">Home / &nbsp;<strong>Dashboard</strong></p>
     </section>
 
     <!-- === Conteudo ==== -->
