--- a/index.html
+++ b/index.html
@@ -81,24 +81,61 @@
   </nav>
 
   <section class="home">
-    <nav class="mb-3 bg-body border-bottom" style="height: 50px;">
+    <nav class="mb-3 border-bottom" style="height: 50px;">
       <div class="dropdown--nav" href="#">
         <a class="dropdown--nav--list" href="#" role="" data-bs-toggle="dropdown" aria-expanded="false">
           <span class="btn btn-" style="border-radius: 50%;"></span>
           <span class="user--name--nav"><strong><i class="bi bi-gear-fill"></i></strong></span>
         </a>
         <ul class="dropdown-menu">
-          <li class="list--menu--nav"><a class="dropdown-item" style="display: flex; justify-content: flex-start;"
-              href="#">
+          <li class="list--menu--nav">
+            <button type="button" class="dropdown-item" data-bs-toggle="modal" data-bs-target="#alterarCorModal">
+              <i class="bi bi-palette" style="margin-right: 10px;"></i>Alterar Cor
+            </button>
+          </li>
+          <li class="list--menu--nav"><a class="dropdown-item" style="display: flex; justify-content: flex-start;" href="#">
               <i class="bi bi-pencil" style="margin-right: 10px;"></i>Trocar Senha</a>
           </li>
-          <li class="list--menu--nav"><a class="dropdown-item" style="display: flex; justify-content: flex-start; "
-              href="#">
+          <li class="list--menu--nav"><a class="dropdown-item" style="display: flex; justify-content: flex-start;" href="#">
               <i class="bi bi-box-arrow-right" style="margin-right: 10px;"></i>Logout</a>
           </li>
         </ul>
       </div>
     </nav>
+
+    <!-- Modal de Alteração de Cor -->
+    <div class="modal fade" id="alterarCorModal" tabindex="-1" aria-labelledby="alterarCorModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="alterarCorModalLabel">Alterar Cor</h5>
+            <button type="button" class="close" data-bs-dismiss="modal" aria-label="Fechar">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="form-group">
+                <label for="backgroundColor">Cor de fundo:</label>
+                <input type="color" class="form-control" id="backgroundColor" placeholder="RGB: #000000">
+              </div>
+              <div class="form-group">
+                <label for="sidebarColor">Cor do Menu:</label>
+                <input type="color" class="form-control" id="sidebarColor">
+              </div>
+              <div class="form-group">
+                <label for="cardColor">Cor dos Cards:</label>
+                <input type="color" class="form-control" id="cardColor">
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+            <button type="button" class="btn btn-primary">Salvar</button>
+          </div>
+        </div>
+      </div>
+    </div> 
 
     <section style="margin-left: 20px;">
       <h1>Home</h1>
@@ -140,7 +177,7 @@
             </div>
           </div>
 
-          <section class="cards">
+          <section>
             <div class="row" style="margin: 5px; min-width: 330px;">
               <div class="col">
                 <div class="card shadow" style="border: none;">
