--- a/index.html
+++ b/index.html
@@ -127,6 +127,14 @@
                 <label for="cardColor">Cor dos Cards:</label>
                 <input type="color" class="form-control" id="cardColor">
               </div>
+              <div class="form-group">
+                <label for="textColor">Cor do texto:</label>
+                <input type="color" class="form-control" id="textColor">
+              </div>
+              <div class="form-group">
+                <label for="iconColor">Cor dos Ícones:</label>
+                <input type="color" class="form-control" id="iconColor">
+              </div>
             </form>
           </div>
           <div class="modal-footer">
