--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <nav class="mb-3 border-bottom" style="height: 50px;">
       <div class="dropdown--nav" href="#">
         <a class="dropdown--nav--list" href="#" role="" data-bs-toggle="dropdown" aria-expanded="false">
-          <span class="btn btn-" style="border-radius: 50%;"></span>
+          <span class="btn btn-"></span>
           <span class="user--name--nav"><strong><i class="bi bi-gear-fill"></i></strong></span>
         </a>
         <ul class="dropdown-menu">
@@ -154,9 +154,9 @@
         <section class="small-cards" id="">
           <div class="row" style="margin: 5px;">
             <div class="col-sm-12">
-              <div class="card shadow" style="border: none;">
+              <div class="card shadow">
                 <span class="card--descricao">
-                  <h5 class="card-header card-title" style="border: none;"><strong>Avaliações Pendentes
+                  <h5 class="card-header card-title"><strong>Avaliações Pendentes
                       <span class="descricao--date" style="font-size: 12px; color: var(--text-color)">|
                         Mês</span></strong>
                     <a class="btn--icon" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i
@@ -183,41 +183,39 @@
             </div>
           </div>
 
-          <section>
-            <div class="row" style="margin: 5px; min-width: 330px;">
-              <div class="col">
-                <div class="card shadow" style="border: none;">
-                  <span class="card--descricao">
-                    <h5 class="card-header card-title" style="border: none;"><strong>Avaliações Concluídas
-                        <span class="descricao--date" style="font-size: 12px; color: var(--text-color)">|
-                          Mês</span></strong>
-                      <a class="btn--icon" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i
-                          href="#" class="bi bi-three-dots icon--date" style="text-decoration: none;"></i>
-                      </a>
-                      <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Hoje</a></li>
-                        <li><a class="dropdown-item" href="#">Mês</a></li>
-                        <li><a class="dropdown-item" href="#">Ano</a></li>
-                      </ul>
-                    </h5>
-                  </span>
-                  <div class="d-flex align-items-center">
-                    <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                      <i class="bi bi-clipboard-check icon--primary"></i>
-                    </div>
-                    <div class="ps-3" style="margin: 15px;">
-                      <h6 style="font-size: 36px;">145</h6>
-                      <span class="text-success small pt-1 fw-bold">12</span> <span
-                        class="text-muted small pt-2 ps-1">Avaliações</span>
-                    </div>
+          <div class="row" style="margin: 5px;">
+            <div class="col">
+              <div class="card shadow">
+                <span class="card--descricao">
+                  <h5 class="card-header card-title"><strong>Avaliações Concluídas
+                      <span class="descricao--date" style="font-size: 12px; color: var(--text-color)">|
+                        Mês</span></strong>
+                    <a class="btn--icon" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i
+                        href="#" class="bi bi-three-dots icon--date" style="text-decoration: none;"></i>
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#">Hoje</a></li>
+                      <li><a class="dropdown-item" href="#">Mês</a></li>
+                      <li><a class="dropdown-item" href="#">Ano</a></li>
+                    </ul>
+                  </h5>
+                </span>
+                <div class="d-flex align-items-center">
+                  <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
+                    <i class="bi bi-clipboard-check icon--primary"></i>
+                  </div>
+                  <div class="ps-3" style="margin: 15px;">
+                    <h6 style="font-size: 36px;">145</h6>
+                    <span class="text-success small pt-1 fw-bold">12</span> <span
+                      class="text-muted small pt-2 ps-1">Avaliações</span>
                   </div>
                 </div>
               </div>
             </div>
-          </section>
+          </div>
           <!-- Reports -->
           <section class="grafich" style="margin: 15px;">
-            <div class="card shadow grafich--position" style="border: none;">
+            <div class="card shadow grafich--position">
               <div class="filter">
                 <a class="icon" href="#" data-bs-toggle="dropdown"><i class="bi bi-three-dots"></i></a>
                 <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
@@ -294,7 +292,7 @@
         <div class="recent-atividade">
           <div class="row" style="margin: 5px 15px 0 15px; height: calc(100% - 18px);">
             <!-- Recent Activity -->
-            <div class="card shadow" style="border: none;">
+            <div class="card shadow">
               <div class="filter">
                 <a class="icon" href="#" data-bs-toggle="dropdown"><i class="bi bi-three-dots"></i></a>
                 <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
@@ -372,7 +370,7 @@
 
       </div>
 
-      <section class="cards m-3" style="border-radius: 5px;">
+      <section class="cards m-3">
         <div class="col--table shadow">
           <div class="d-flex justify-content-between mb-4">
             <button type="button" class="btn btn-outline-primary">Exportar</button>
