--- a/index.html
+++ b/index.html
@@ -100,41 +100,41 @@
         <i class='bx bx-menu toggle'></i>
       </header>
   
-      <div class="menu-bar">
+      <div class="mt-3">
         <div class="menu">
           <ul class="menu-links" style="padding-left: 0 !important;">
             <li class="nav-link">
-              <a class="link-form closeIcons" href="#">
+              <a class="link-form" href="#">
                 <i class='bi bi-house icon'></i>
                 <span class="text nav-text">Home</span>
               </a>
             </li>
             <li class="nav-link">
-              <a class="link-form closeIcons" href="#">
+              <a class="link-form" href="#">
                 <i class="bi bi-graph-up icon"></i>
                 <span class="text nav-text">Dashboard</span>
               </a>
             </li>
             <li class="nav-link">
-              <a class="link-form closeIcons" href="#">
+              <a class="link-form" href="#">
                 <i class='bx bx-brain icon'></i>
                 <span class="text nav-text">PDI</span>
               </a>
             </li>
             <li class="nav-link">
-              <a class="link-form closeIcons" href="#">
+              <a class="link-form" href="#">
                 <i class='bi bi-file-earmark-text icon'></i>
                 <span class="text nav-text">Relatório</span>
               </a>
             </li>
             <li class="nav-link">
-              <a class="link-form closeIcons" href="#">
+              <a class="link-form" href="#">
                 <i class='bi bi-sliders2 icon'></i>
                 <span class="text nav-text">Calibração</span>
               </a>
             </li>
             <li class="nav-link">
-              <a class="link-form closeIcons" href="#">
+              <a class="link-form" href="#">
                 <i class="bi bi-house-gear icon"></i>
                 <span class="text nav-text">Painel Admin</span>
               </a>
