alterando o footer para dentro do menu principal

--- a/index.html
+++ b/index.html
@@ -428,16 +428,17 @@
           </table>
         </div>
       </section>
+      <!-- ======= Footer ======= -->
+      <footer id="footer" class="footer">
+        <div class="copyright">
+          &copy; Copyright <strong><span>Platinum</span></strong>. Todos os direitos reservados 2023
+        </div>
+    
+      </footer>
+      <!-- End Footer -->
     </div>
   </section>
 
-  <!-- ======= Footer ======= -->
-  <footer id="footer" class="footer">
-    <div class="copyright">
-      &copy; Copyright <strong><span>Platinum</span></strong>. Todos os direitos reservados 2023
-    </div>
-
-  </footer><!-- End Footer -->
 
 
 
