navbar e sidebar fixed

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-  <nav class="d-flex justify-content-between border-bottom" style="height: 50px;">
+  <nav class="d-flex justify-content-between border-bottom">
     <div class="image-text">
       <span class="image">
         <img src="logo-fundo-transparente-novo_P6GmKNt.png" height="100%" alt="Icone-do-Site-Platinum">
@@ -51,8 +51,10 @@
         </li>
       </ul>
     </div>
+  </nav>
 
-    <!-- Modal de Alteração de Cor -->
+  <!-- Modal de Alteração de Cor -->
+  <div>
     <div class="modal fade" id="alterarCorModal" tabindex="-1" aria-labelledby="alterarCorModalLabel" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
@@ -91,10 +93,11 @@
         </div>
       </div>
     </div>
-    <!-- Fim Modal de Alteração de Cor -->
-  </nav>
+  </div>
+  <!-- Fim Modal de Alteração de Cor -->
   
   <section class="home">
+    <div></div>
     <nav class="sidebar close border-end">
       <header>
         <i class='bx bx-menu toggle'></i>
